balance: implement v2 foundation specification